[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["nuratabanjeh <nuratabanjeh96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
jupyterlab = "^3.1.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
